welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:58: error: Int does not take parameters
					if(etat != nbColonne()){
                                                            ^