welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
		// Variable Environnement
		var nbLigne: Int = 2;
		var nbColonne: Int = 2;
		//Compteurs
		var cpas: Int = 0;
		var cl: Int = 0;
		var cc: Int = 0;
		var cour: Int = 0;
		var etat: Int = 1;

		def courir(nbPas: Int){
			for(cpas <- 1 to nbPas){
				avance();
			}
		}
	
		def faireDiag(c: Color){
		setCouleurBrosse(c);
		gauche();
		avance();
		baisseBrosse();
		leveBrosse();
		recule();
		droite();
		avance();
		baisseBrosse();
		leveBrosse();
		courir(2);
		gauche();
	}

		def faireMotif(){
			faireDiag(Color.RED);
			faireDiag(Color.BLUE);
			faireDiag(Color.GREEN);
			faireDiag(Color.YELLOW);
		}

		def faireLigne(){
			for(cl <- 1 to nbColonne){
				faireMotif();
				if(!estFaceMur()){
					for(cour <- 1 to 4){
						if(!estFaceMur){
							avance();
						}
					}
					
				}
			}
		}

		def faireColonne(){
				for(cc <- 1 to nbColonne){
					faireLigne();
					if(etat != nbColonne()){
						retourne();
						courir(7);
						droite();
						courir(4);
						droite();
						etat = etat + 1;
				}
			}
		}

		faireColonne();
}
